<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/silver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/displayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangman"
            android:textColor="@color/indigo"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.023"/>
    <TextView
            android:id="@+id/displayMessage"
            android:text="@string/display_message"
            android:textColor="@color/dark_green"
            android:textSize="24sp"
            android:layout_width="160dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayTitle"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintVertical_bias="0.08"/>
    <com.example.hangman.HangmanView
            android:id="@+id/displayHangman"
            android:layout_width="180dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/displayTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/displayMessage"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.415"
            app:layout_constraintVertical_bias="0.125"/>
    <Button
            android:id="@+id/startButton"
            android:text="@string/start"
            android:background="@color/dark_green"
            android:textColor="@color/khaki"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displayMessage"
            app:layout_constraintStart_toEndOf="@+id/displayHangman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.581"
            app:layout_constraintVertical_bias="0.184"/>

</androidx.constraintlayout.widget.ConstraintLayout>