<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:background="@color/dodger_blue"
                                                   android:id="@+id/gameScreen"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <com.example.hangman.HangmanConstruct
            android:id="@+id/viewHangman"
            android:layout_width="350dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/displayPhrase" app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintVertical_bias="0.579"/>
    <TextView
            android:id="@+id/displayPhrase"
            android:text="@string/display_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/letterSubmit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.633"/>
    <TextView
            android:id="@+id/lettersUsedMessage"
            android:text="@string/letters_used"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.647"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:id="@+id/displayLettersUsed"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/white"
            android:layout_width="250dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.794"/>
    <EditText
            android:id="@+id/letterSubmit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.929" app:layout_constraintHorizontal_bias="0.247"/>
    <Button
            android:id="@+id/buttonSubmit"
            android:text="@string/submit_letter"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.701"
            app:layout_constraintVertical_bias="0.944"/>
</androidx.constraintlayout.widget.ConstraintLayout>